# meemoo-sip-validator

./: .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
.openshift/: Jenkinsfile
meemoo_sip_validator/: constraints.py  sip_validator.py
meemoo_sip_validator/_cli/: validator.py
meemoo_sip_validator/assets/: edtf.xsd.xml  xml.xsd.xml
meemoo_sip_validator/assets/2.1/: basic-2-1.xsd.xml  basic-dcterms-2-1.xsd.xml  basic-schema-2-1.xsd.xml  film-2-1.xsd.xml  material-artwork-2-1.xsd.xml
meemoo_sip_validator/constraints/: __init__.py
meemoo_sip_validator/constraints/v21/: package.py
meemoo_sip_validator/v21/: __init__.py  constraints.py  validations.py
meemoo_sip_validator/v21/basic/: constraints.py  validations.py
meemoo_sip_validator/v2_1/: __init__.py
meemoo_sip_validator/v2_1/_core/: codes.py  commons_ip.py  models.py  profiles.py  report.py  structural.py  thesauri.py  utils.py  validate.py  xsd.py
meemoo_sip_validator/v2_1/_core/descriptive/: dc_schema.py
meemoo_sip_validator/v2_1/_core/premis/: helpers.py  premis.py  reports.py
tests/: test_constraints.py  test_sip_validator.py
tests/resources/bacp22/correct/: dc+schema.xml
tests/resources/msip0007/missing_mets/: METS.xml
tests/resources/msip0011/correct_contentinformationtype/: METS.xml
tests/resources/msip0011/missing_contentinformationtype/: METS.xml
tests/resources/msip0012/correct_othercontentinformationtype_2_1_bibliographic/: METS.xml
tests/resources/msip0012/correct_othercontentinformationtype_2_1_material_artwork/: METS.xml
tests/resources/msip0012/missing_othercontentinformationtype/: METS.xml
tests/resources/msip0012/wrong_othercontentinformationtype/: METS.xml
tests/resources/msip0150/correct_premis/: premis.xml
tests/resources/msip0150/missing_premis/: premis.xml
tests/resources/msip0151/missing_premis_version/: premis.xml
tests/resources/msip0151/wrong_premis_version/: premis.xml
tests/resources/msip11/wrong_contentinformationtype/: METS.xml
tests/resources/msip12/correct_othercontentinformationtype_2_1_basic/: METS.xml
tests/resources/v21/bacp22/wrong_missing/: dc+schema.xml
tests/resources/v21/bacp22/wrong_namespaces/: dc+schema.xml
tests/v21/: test_constraints.py  test_constraints_basic.py
tests/v2_1/: test_edtf.py  test_examples.py  test_premis.py  utils.py
tests/v2_1/premis/: test_object_identifier_type.py  test_unique_object_identifiers.py
tests/v2_1/premis/assets/: objects.xml
