[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meemoo-sip-validator"
# The version of this library is set by adding a tag vX.Y.Z to a commit.
# The CI/CD pipeline will patch the version bellow.
version = "0.0.1" # Don't change me
description = "A library to validate meemoo SIP's"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-commons-ip==0.3.0",
    "xmlschema==4.1.0",
    "edtf-validate==2.0.0",
    "sipin-eark-models==0.0.7",
]
classifiers = [
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "ruff==0.12.7",
    "build==1.3.0",
    "twine==6.1.0",
]

[tool.setuptools.package-data]
"meemoo_sip_validator" = ["assets/**/*.xml"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"

[tool.basedpyright]
reportExplicitAny = false
reportAny = false