[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meemoo-sip-validator"
version = "0.2.8"
description = "A library to validate meemoo SIP's"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-commons-ip==0.3.0",
    "xmlschema==4.1.0",
    "edtf-validate==2.0.0",
    "sipin-eark-models==0.0.11",
]
classifiers = [
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "ruff==0.12.7",
    "build==1.3.0",
    "twine==6.1.0",
]

[project.scripts]
meemoo-sip-validator = "meemoo_sip_validator._cli.validator:validator_cli"

[tool.setuptools.package-data]
"meemoo_sip_validator" = ["assets/**/*.xml"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"

[tool.basedpyright]
reportExplicitAny = false
reportAny = false